fix date causing runtime error on safari

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -111,7 +111,7 @@
   }
 
   *::selection {
-    @apply bg-yellow-500 text-warmGray-800;
+    @apply bg-unhovered text-warmGray-800;
   }
 
   .shadow_line {
